Add arch height @50% and AHI measurement features

--- a/test.html
+++ b/test.html
@@ -477,6 +477,8 @@
                         <p><strong>足の長さ:</strong> ${result.foot_length.toFixed(3)}</p>
                         <p><strong>足の幅:</strong> ${result.foot_width.toFixed(3)}</p>
                         <p><strong>周囲長:</strong> ${result.circumference.toFixed(3)}</p>
+                        <p><strong>甲高@50%:</strong> ${result.dorsum_height_50.toFixed(3)}</p>
+                        <p><strong>AHI:</strong> ${result.ahi.toFixed(3)}</p>
                         <p><strong>点数:</strong> ${result.point_count}</p>
                         <p><strong>ファイル名:</strong> ${result.original_filename}</p>
                     `);
@@ -516,6 +518,8 @@
                     const footLength = response.headers.get('X-Foot-Length');
                     const footWidth = response.headers.get('X-Foot-Width');
                     const circumference = response.headers.get('X-Circumference');
+                    const dorsumHeight50 = response.headers.get('X-Dorsum-Height-50');
+                    const ahi = response.headers.get('X-AHI');
                     const pointCount = response.headers.get('X-Point-Count');
                     
                     // 処理済ファイルをArrayBufferとして取得
@@ -532,9 +536,12 @@
                         <p><strong>足の長さ:</strong> ${footLength}</p>
                         <p><strong>足の幅:</strong> ${footWidth}</p>
                         <p><strong>周囲長:</strong> ${circumference}</p>
+                        <p><strong>甲高@50%:</strong> ${dorsumHeight50}</p>
+                        <p><strong>AHI:</strong> ${ahi}</p>
                         <p><strong>処理後点数:</strong> ${pointCount}</p>
                         <p><strong>元点数(表示分):</strong> ${originalData.vertices.length}</p>
-                        <p><em>左右独立ビュー: 左=入力 / 右=処理後 (RGB反映)</em></p>
+                        <p><em>左右独立ビュー: 左=入力 / 右=処理後</em></p>
+                        <p><em>※ 赤色: 最大幅断面（周囲長測定）、青色: 50%位置断面（甲高・AHI測定）</em></p>
                     `);
                 } else {
                     const result = await response.json();
